<resources>
    <!-- 共通 -->
    <string name="app_name">本マ - 本の管理をマークダウンで！</string>
    <string name="yes">はい</string>
    <string name="cancel">キャンセル</string>
    <string name="save">保存</string>
    <string name="manage">本を管理する</string>
    <string name="detail">本の詳細を見る</string>
    <string name="delete">本を削除する</string>
    <string name="sort">並べ替え</string>
    <string name="hyphen">-</string>
    <string name="description_book_image">Book Image</string>
    <string name="description_bookmark_image">Bookmark Image</string>
    <string name="all_books">すべての本</string>
    <string name="book_status_want_to">読みたい本</string>
    <string name="book_status_reading">読んでいる本</string>
    <string name="book_status_finished">読み終わった本</string>
    <string name="deleted">削除しました</string>
    <string name="num">%1$d</string>
    <string name="str">%1$s</string>

    <!-- 本棚ページ -->
    <string name="toolbar_title_bookshelf">本棚</string>
    <string name="delete_dialog_message">削除してもよろしいですか？</string>
    <string name="order_by_title">タイトル</string>
    <string name="order_by_author">著者名</string>
    <string name="order_by_date_added">追加日</string>
    <string name="order_by_my_rating">自分の評価</string>
    <string name="asc">昇順</string>
    <string name="desc">降順</string>
    <string name="new_to_old">新しい順</string>
    <string name="old_to_new">古い順</string>
    <string name="low_to_height">低い順</string>
    <string name="height_to_low">高い順</string>
    <string name="no_books_on_bookshelf">本棚に本がありません</string>
    <string name="no_books_want_to_read_on_bookshelf">読みたい本はありません</string>
    <string name="no_books_reading_on_bookshelf">読んでいる本はありません</string>
    <string name="no_books_finished_on_bookshelf">読み終わった本はありません</string>
    <string name="surface_view">surface view</string>
    <string name="close_button">close button</string>

    <!-- 本検索ページ -->
    <string name="search_with_free_word">フリーワード検索</string>
    <string name="search_with_title">タイトル検索</string>
    <string name="search_with_author">著者名検索</string>
    <string name="add_to_bookshelf">本棚に追加</string>
    <string name="already_added">追加済</string>
    <string name="open_book_detail">詳細</string>
    <string name="search_error">エラーが発生しました。再度お試しください。</string>
    <string name="item_not_fount">お探しの本が見つかりませんでした。</string>
    <string name="dialog_add_book_title">本棚に追加</string>
    <string name="dialog_add_book_msg">本棚に追加しますか？</string>
    <string name="exists_in_my_shelf">すでに本棚に追加されています。</string>
    <string name="query_hint_book_search">タイトル、著者名など</string>

    <!-- 本管理ページ -->
    <string name="toolbar_title_book_detail">本の管理</string>
    <string name="book_detail_tab_data">データ</string>
    <string name="book_detail_tab_review">感想</string>
    <string name="description">説明</string>
    <string name="book_description_not_found">説明が見つかりませんでした。</string>
    <string name="review_not_found">まだ感想はありません</string>
    <string name="button_title_add_review">感想を書く</string>
    <string name="button_title_edit_review">編集する</string>
    <string name="markdown_supported">マークダウンでの記入も可能です。</string>
    <string name="unknown_author">著者不明</string>
    <string name="unknown_title">タイトル不明</string>
    <string name="my_rating">自分の評価</string>
    <string name="status_label">ステータス</string>
    <string name="start_date_label">読書開始日</string>
    <string name="finish_date_label">読書終了日</string>
    <string name="clear">クリア</string>
    <string name="description_markdown_is_visible">Markdown is visible</string>
    <string name="description_markdown_is_invisible">Markdown is invisible</string>

    <!-- レビュー作成ページ -->
    <string name="toolbar_title_add_review">感想を書く</string>
    <string name="dialog_discard_input_content">入力中の内容は保存されませんがよろしいでしょうか？</string>
    <string name="saved">保存しました。</string>
    <string name="menu_item_add_review">感想を書く</string>
    <string name="menu_item_change_book_image">表紙を変更する</string>
    <string name="menu_item_delete_book">削除する</string>
    <string name="edit_review_hint">
        一部のマークダウンが利用できます。\n
        \n
        改行: 半角スペース２つ\n
        \n
        # 見出し１\n
        ## 見出し２\n
        ### 見出し３\n
        \n
        - リスト１\n
        - リスト２\n
        - リスト３\n
        \n
        1. 番号付きリスト１\n
        2. 番号付きリスト２\n
        3. 番号付きリスト３\n
        \n
        *斜体*\n
        \n
        **太字**\n
        \n
        `インラインコード`\n
        \n
        ```\n
        コードブロック\n
        ```
    </string>

</resources>
