<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_narrow"
            android:orientation="horizontal">

            <Button
                android:id="@+id/filter_button_all"
                style="@style/FilterButton.Selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_default"
                android:layout_marginEnd="@dimen/space_default"
                android:padding="@dimen/space_default"
                android:text="@string/all_books" />

            <Button
                android:id="@+id/filter_button_want_to_read"
                style="@style/FilterButton.Selectable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_default"
                android:text="@string/book_status_want_to"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/filter_button_reading"
                style="@style/FilterButton.Selectable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_default"
                android:text="@string/book_status_reading"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/filter_button_finished"
                style="@style/FilterButton.Selectable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_default"
                android:text="@string/book_status_finished"
                android:textColor="@color/white" />

        </LinearLayout>

    </HorizontalScrollView>

</layout>