<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/markdown_visible_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="@dimen/space_narrow"
            android:layout_marginEnd="@dimen/space_default"
            android:clickable="true"
            android:contentDescription="@string/description_markdown_is_visible"
            android:src="@drawable/ic_baseline_visibility_32_on"
            android:translationZ="1dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/markdown_invisible_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="@dimen/space_narrow"
            android:layout_marginEnd="@dimen/space_default"
            android:clickable="true"
            android:contentDescription="@string/description_markdown_is_invisible"
            android:src="@drawable/ic_baseline_visibility_32_off"
            android:translationZ="1dp"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/book_review"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/book_review_markdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_wide" />

            <TextView
                android:id="@+id/book_review_simple_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_wide" />

            <Button
                android:id="@+id/edit_review_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_wide"
                android:layout_marginBottom="@dimen/space_wide"
                android:background="@drawable/bg_rounded_square_light_gray"
                android:drawableStart="@drawable/ic_baseline_edit_18"
                android:drawablePadding="@dimen/space_narrow"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="@dimen/space_wide"
                android:paddingTop="@dimen/space_default"
                android:paddingEnd="@dimen/space_wide"
                android:paddingBottom="@dimen/space_default"
                android:text="@string/button_title_edit_review"
                android:textColor="@color/text_color_default" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_book_review"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/no_book_review_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:text="@string/review_not_found" />

            <Button
                android:id="@+id/add_review_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_wide"
                android:background="@drawable/bg_rounded_square_light_gray"
                android:drawableStart="@drawable/ic_baseline_edit_18"
                android:drawablePadding="@dimen/space_narrow"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="@dimen/space_wide"
                android:paddingTop="@dimen/space_default"
                android:paddingEnd="@dimen/space_wide"
                android:paddingBottom="@dimen/space_default"
                android:text="@string/button_title_add_review"
                android:textColor="@color/text_color_default" />

        </LinearLayout>

    </FrameLayout>

</layout>
