<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true">

        <ImageView
            android:id="@+id/book_search_item_image"
            android:layout_width="@dimen/book_row_image_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default"
            android:layout_marginTop="@dimen/space_default"
            android:layout_marginBottom="@dimen/space_default"
            android:contentDescription="@string/description_book_image"
            android:maxHeight="@dimen/book_row_image_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/book_search_item_title"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default"
            android:layout_marginTop="@dimen/space_default"
            android:layout_marginEnd="@dimen/space_default"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/text_size_book_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/book_search_item_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/book_search_item_author"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default"
            android:layout_marginEnd="@dimen/space_default"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/text_size_book_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/book_search_item_image"
            app:layout_constraintTop_toBottomOf="@id/book_search_item_title" />

        <RatingBar
            android:id="@+id/book_search_rating"
            style="?android:ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default"
            android:layout_marginTop="@dimen/space_narrow"
            app:layout_constraintStart_toEndOf="@+id/book_search_item_image"
            app:layout_constraintTop_toBottomOf="@id/book_search_item_author" />

        <TextView
            android:id="@+id/book_search_ratings_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_default"
            android:layout_marginTop="@dimen/space_narrow"
            android:text="@string/hyphen"
            app:layout_constraintStart_toEndOf="@+id/book_search_rating"
            app:layout_constraintTop_toBottomOf="@id/book_search_item_author" />

        <ImageView
            android:id="@+id/book_search_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_narrow"
            android:layout_marginBottom="@dimen/space_narrow"
            android:contentDescription="@string/description_bookmark_image"
            android:src="@drawable/ic_baseline_bookmark_18"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
