<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/book_detail_image_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_wide"
                android:layout_marginTop="@dimen/space_wide"
                android:layout_marginBottom="@dimen/space_wide"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/book_detail_image"
                    android:layout_width="@dimen/bookshelf_image_width"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/description_book_image" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/book_detail_title"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_wide"
                android:layout_marginTop="@dimen/space_wide"
                android:layout_marginEnd="@dimen/space_wide"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="@dimen/text_size_book_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/book_detail_image_card"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/book_detail_author"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_wide"
                android:layout_marginTop="@dimen/space_default"
                android:layout_marginEnd="@dimen/space_wide"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/book_detail_image_card"
                app:layout_constraintTop_toBottomOf="@+id/book_detail_title" />

            <RatingBar
                android:id="@+id/book_detail_rating_bar"
                style="?android:ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_wide"
                android:layout_marginTop="@dimen/space_wide"
                android:theme="@style/AppTheme"
                app:layout_constraintStart_toEndOf="@+id/book_detail_image_card"
                app:layout_constraintTop_toBottomOf="@+id/book_detail_author" />

            <TextView
                android:id="@+id/book_detail_ratings_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_default"
                android:text="@string/hyphen"
                app:layout_constraintBottom_toBottomOf="@id/book_detail_rating_bar"
                app:layout_constraintStart_toEndOf="@+id/book_detail_rating_bar"
                app:layout_constraintTop_toTopOf="@id/book_detail_rating_bar" />

            <Button
                android:id="@+id/book_detail_link_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_wide"
                android:layout_marginTop="@dimen/space_wide"
                android:layout_marginEnd="@dimen/space_wide"
                android:background="@drawable/bg_rounded_square_light_blue"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="@dimen/space_narrow"
                android:text="@string/open_book_detail"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/book_detail_image_card"
                app:layout_constraintTop_toBottomOf="@id/book_detail_rating_bar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/book_desc_summary_short"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_wide"
            android:layout_marginTop="@dimen/space_wide"
            android:layout_marginEnd="@dimen/space_wide"
            android:ellipsize="end"
            android:maxLines="3" />

        <TextView
            android:id="@+id/book_desc_summary_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_wide"
            android:layout_marginTop="@dimen/space_wide"
            android:layout_marginEnd="@dimen/space_wide"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_detail_image_card" />

    </LinearLayout>

</layout>
